# doron-desktop

./: .gitignore  .vercelignore  CLAUDE.md  PLAN.md  PRD.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  installer.nsis  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/email_eval_corpus/: email_classification_dataset.json
apps/desktop/src-tauri/src/: clipboard.rs  lib.rs  power.rs  user_settings.rs
apps/desktop/src-tauri/src/auth/: mod.rs
apps/desktop/src-tauri/src/case/: annotations.rs  mod.rs
apps/desktop/src-tauri/src/doc_template/: download.rs  local_add.rs  mod.rs
apps/desktop/src-tauri/src/email/: emails_ai.rs  emails_alerts.rs  emails_case_api.rs  emails_classify.rs  emails_classify_deterministic.rs  emails_classify_llm.rs  emails_ingestion.rs  emails_ops.rs  emails_orchestrate.rs  emails_settings.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/embeddings/: mod.rs
apps/desktop/src-tauri/src/extractor/: metadata.rs  mod.rs  pdf.rs  txt.rs
apps/desktop/src-tauri/src/indexer/: mod.rs
apps/desktop/src-tauri/src/llm/: backend_stream.rs  cloud_transcribe.rs  field_extraction.rs  llm_local_mode.rs  llm_provider.rs  llm_provider_backend_online.rs  llm_provider_entropic.rs  llm_provider_gemini.rs  llm_provider_local.rs  llm_provider_mock.rs  llm_provider_openai.rs  llm_settings.rs  mod.rs  sidecar.rs  whisper_local.rs
apps/desktop/src-tauri/src/query/: helpers.rs  llm.rs  mod.rs  queries.rs  types.rs
apps/desktop/src-tauri/src/store/: mod.rs
apps/desktop/src-tauri/src/tags/: mod.rs
apps/desktop/src-tauri/tests/: decoupled_pipeline_test.rs  decoupled_test.db-shm  decoupled_test.db-wal  downloader_test.rs  evaluation_dataset.json  provider_test.rs
apps/desktop/src-tauri/tests/common/: mod.rs
src-tauri/: Cargo.toml  documents.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/database/: cases.sql
src-tauri/src/: lib.rs
src-tauri/src/case/: annotations.rs  mod.rs
src-tauri/src/case_template/: mod.rs
src-tauri/src/doc_template/: context.rs  mod.rs
src-tauri/src/documents/: versioning.rs
src-tauri/src/email/: emails_ai.rs  emails_alerts.rs  emails_ingestion.rs  emails_ops.rs  mod.rs  types.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/extractor/: docx.rs  mod.rs  pdf.rs  xlsx.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/query/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/template/: mod.rs
src-tauri/tests/: test_output.db
src-tauri/tests/docs/: tiviat-nezikin.docx
src-tauri/tests/embeddings/: embeddings_test.rs  main.rs
src-tauri/tests/extractor/: extractor_test.rs  main.rs
src-tauri/tests/indexer/: indexer_test.rs
(+391 files in other folders)
