[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-full"] }
reqwest     = { version = "0.12", features = ["json"] }
tokio       = { version = "1", features = ["full"] }
calamine    = "0.24"
zip         = "2"
quick-xml   = "0.36"
pdf-extract = "0.7"
lopdf       = "0.34"
walkdir     = "2"
chrono      = { version = "0.4", features = ["serde"] }
regex       = "1"

[dev-dependencies]
dotenvy = "0.15"

